# latc

./: .gitignore  Makefile  latte.cabal
lib/: runtime.c
src/: Annotated.hs  Common.hs  Compile.hs  Frontend.hs  Main.hs  PrintProg.hs  PrintQuad.hs  Quad.hs  RunFrontend.hs
src/Asm/: Entry.hs  Generate.hs
src/Semantic/: Common.hs  ErrorT.hs  Expr.hs  Program.hs  Stmt.hs
src/bnfc/: Latte.cf  Makefile
test/: Spec.hs
