name:                latte
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             APACHE
license-file:        LICENSE
author:              Kamil Braun
copyright:           2018 Kamil Braun
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     AbsLatte,
                       ParLatte,
                       LexLatte,
                       ErrM,
                       Annotated,
                       Semantic.Common,
                       Semantic.Expr,
                       Semantic.Stmt,
                       Semantic.Program,
                       Semantic.ErrorT,
                       Quad,
                       PrintQuad,
                       Intermediate.Generate,
                       Asm.Generate
  build-depends:       base >= 4.7 && < 5,
                       containers, array, mtl, transformers
  hs-source-dirs:      src, src/bnfc
  default-language:    Haskell2010

executable latc
  main-is:             src/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       containers,
                       filepath,
                       process,
                       latte
