name:                latte
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             Apache
author:              Kamil Braun
copyright:           2018 Kamil Braun

library
  exposed-modules:     AbsLatte,
                       ParLatte,
                       LexLatte,
                       ErrM,
                       Annotated,
                       Semantic.Common,
                       Semantic.Expr,
                       Semantic.Stmt,
                       Semantic.Program,
                       Semantic.ErrorT,
                       Frontend,
                       Quad,
                       PrintQuad,
                       PrintProg,
                       Intermediate.Generate,
                       Intermediate.Flow,
                       Intermediate.Liveness,
                       Asm.Generate,
                       Asm.Entry,
                       Common
  build-depends:       base >= 4.7 && < 5,
                       containers, array, mtl, transformers, extra, lens
  hs-source-dirs:      src, src/bnfc
  default-language:    Haskell2010

executable latc
  main-is:             src/RunFrontend.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       containers,
                       filepath,
                       process,
                       latte

executable latc_x86
  main-is:             src/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       containers,
                       filepath,
                       process,
                       latte
test-suite spec
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    build-depends:     latte,
                       base,
                       QuickCheck,
                       hspec,
                       filepath,
                       process,
                       temporary,
                       mtl
    default-language:  Haskell2010
    hs-source-dirs:    test
